--- a/baddata_outliers_vision.Rmd
+++ b/baddata_outliers_vision.Rmd
@@ -11,4 +11,11 @@ output:
 
 In this example we will process an xls-file even before importing it in R. The file can be downloaded [here](https://github.com/SchmidtPaul/DSFAIR/blob/master/data/vision.xls).
 
+...work in progress...
 
+**R-Code and exercise solutions**
+
+Please [click here](https://github.com/SchmidtPaul/DSFAIR/tree/master/Rpurl){target="_blank"} to find a folder with `.R` files. Each file contains
+
+ * the entire R-code of each example combined, including
+ * solutions to the respective exercise(s).
