--- a/cor_reg_drinks.Rmd
+++ b/cor_reg_drinks.Rmd
@@ -265,4 +265,9 @@ ggplot(data = dat, aes(x = drinks, y = blood_alc)) +
   theme_classic()
 ```
 
+**R-Code and exercise solutions**
 
+Please [click here](https://github.com/SchmidtPaul/DSFAIR/tree/master/Rpurl){target="_blank"} to find a folder with `.R` files. Each file contains
+
+ * the entire R-code of each example combined, including
+ * solutions to the respective exercise(s).
