--- a/Repeated_RCBD_PiephoEdmondson2018.Rmd
+++ b/Repeated_RCBD_PiephoEdmondson2018.Rmd
@@ -95,7 +95,7 @@ dat %>%
 
 We can also create a plot to get a better feeling for the data. Note that here we could even decide to extend the ggplot to become an animated gif as follows:
 
-```{r, class.source = "fold-hide", purl = FALSE, message = FALSE, warning = FALSE}
+```{r, eval=knitr::is_html_output(), class.source = "fold-hide", purl = FALSE, message = FALSE, warning = FALSE}
 var_colors <- c("#8cb369", "#f4a259", "#5b8e7d", "#bc4b51")
 names(var_colors) <- dat$variety %>% levels()
 
